--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required(VERSION 3.20)
 project(Cly C)
 
-file(GLOB Test
-        "tests/*.c"
+file(GLOB Src
+        "src/*.c"
         )
-file(GLOB Cly
-        "lib/cly/*.c"
+file(GLOB ClyString
+        "lib/cly/cly_string/*.c"
+        )
+file(GLOB ClyLinkedList
+        "lib/cly/cly_linked_list/*.c"
         )
 file(GLOB ClyH
         "include/*.h"
@@ -14,4 +17,4 @@ file(GLOB ClyH
 set(CMAKE_C_STANDARD 99)
 
 include_directories("include")
-add_executable(Cly ${Test} ${Cly} ${ClyH})
+add_executable(Cly ${Src} ${ClyString} ${ClyLinkedList} ${ClyH})
