--- a/lib/cly/Makefile
+++ b/lib/cly/Makefile
@@ -1,4 +1,4 @@
-SRC = $(wildcard cly_string/*.c cly_linked_list/*.c cly_io/*.c)
+SRC = $(wildcard cly_string/*.c cly_linked_list/*.c cly_io/*.c cly_lib/*.c)
 OBJ = $(SRC:.c=.o)
 
 CFLAGS = -W -Wall -Werror -Wextra -I../../include
